[package]
name = "wink"
version = "0.1.0"
authors = ["Moch Lutfi <kapten.lufi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wink"

[dependencies]
actix-web = "4"
reqwest = "0.11.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
